Fix test_shell so that eventSender works for opened windows.  I've also made focus go to the webview, just like what happens in Chrome.

This is needed for https://bugs.webkit.org/show_bug.cgi?id=36147 and also fixes plugins/keyboard-events.html on Windows.

Review URL: http://codereview.chromium.org/1011005

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@41769 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 7699d05e38e2e4e26add3357151e0fd793080353